--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -7,3 +7,7 @@ item-sell-success: '&a✔ {0} &f所得 {1}'
 item-sell-fail: '&c❌ {0}'
 item-sell-suffix:
   - '&c总计: {0}'
+condition-level-not-enough: '{0} 所需等级 {1}'
+condition-occupation-not-enough: '{0} 所需职业 {1}'
+condition-time-not-enough: '{0} 过期了,过期时间 {1}'
+condition-slot-not-enough: '{0} 不能应用于 {1} 孔位'
