--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -8,6 +8,7 @@ item-sell-fail: '&c❌ {0}'
 item-sell-suffix:
   - '&c总计: {0}'
 condition-level-not-enough: '{0} 所需等级 {1}'
+condition-durability-not-enough: '{0} 没耐久了'
 condition-occupation-not-enough: '{0} 所需职业 {1}'
 condition-time-not-enough: '{0} 过期了,过期时间 {1}'
 condition-slot-not-enough: '{0} 不能应用于 {1} 孔位'
